sidebar component made more reusable (correct behavior, no empty gap above due to top-bar hiding and appearing on scroll, works correctly on long and short screens)

--- a/src/styles/components/_account.scss
+++ b/src/styles/components/_account.scss
@@ -1,3 +1,3 @@
 .account {
-  height: 100vh;
+  height: calc(100vh - $nav-height);
 }
