--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -66,7 +66,6 @@
   }
 
   &__section {
-    margin-top: $nav-height;
     padding-top: 32px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -82,4 +81,3 @@
     z-index: 1;
   }
 }
-
